<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bang</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBSCzFepAPHkUyfpECX13Xl0IR63xWGGjk</string>
    <string name="welcome_to">Welcome To Bang</string>
    <string name="bang">Bang</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="login">LOGIN</string>
    <string name="or_login_with">OR Login With</string>
    <string name="facebook">   Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_verification">Email Verification</string>
    <string name="send_otp">SEND OTP</string>
    <string name="select_country">Select Country</string>
    <string name="search_country">Search Country</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_your_mobile_number_we_will_send_verification_code" tools:ignore="ExtraTranslation">Please enter your Email address we will send verification code.</string>
    <string name="please_enter_your_email_we_will_send_password_your_email" tools:ignore="ExtraTranslation">Please enter your registered email address we will send you password.</string>
    <string name="we_have_sent_you_access_code_via_sms_for_mobile_number_verification">We have sent you access code via SMS for mobile number verification</string>
    <string name="don_t_receive_the_otp">Don\'t receive the OTP?</string>
    <string name="resend">Resend</string>
    <string name="otp_star">*</string>
    <string name="complete_yourwelcome_to_profile">Complete your profile</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="full_name">Full Name</string>
    <string name="done">Done</string>
    <string name="verify">VERIFY</string>
    <string name="crop_image_activity_title">Crop Image</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="alert_no_network">No network connection</string>
    <string name="alertImageException">The file is corrupt &amp; cannot be opened.</string>
    <string name="alertOutOfMemory">This device doesn\'t have enough space , free up storage space</string>
    <string name="i_am">I AM</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="transgender_male">TRANSGENDER MALE</string>
    <string name="transgender_female">TRANSGENDER FEMALE</string>
    <string name="non_gender">NON GENDER</string>
    <string name="preferes">PREFERS</string>
    <string name="todo">TODO</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="hello_blank_fragment">Hello blank settingFragment</string>
    <string name="preferences">PREFERENCES</string>
    <string name="small_pref">Preferences</string>
    <string name="what_image_best_represent_your_ideal_partners_hygiene">What image Best Represent your Ideal partners Hygiene?</string>
    <string name="facebook_app_id">612964105845425</string>
    <string name="fb_login_protocol_scheme">fb612964105845425</string>
    <string name="acc_name_invalid">Name allow alphabets and space only</string>
    <string name="alert_api_fail">Something went wrong, please check after some time.</string>
    <string name="size">SIZE</string>
    <string name="what_image_best_identifies_your_partner_size">What Image Best Identifies Your Partner Size?</string>
    <string name="strength">STRENGTH</string>
    <string name="what_image_best_represents_strength">What Image Best Represents Strength?</string>
    <string name="stamina">STAMINA</string>
    <string name="what_image_best_represents_your_partners_stamina">What Image Best Represents Your Partners Stamina?</string>
    <string name="skills">SKILLS</string>
    <string name="what_image_best_represent_your_partners_skills">What image Best Represent Your Partners Skills?</string>
    <string name="hygiene">HYGIENE</string>
    <string name="what_icon_best_represent_your_partners_hygiene">What Icon Best Represent Your Partners Hygiene?</string>
    <string name="connection">CONNECTION</string>
    <string name="what_image_best_represent_the_connection_you_have_with">What Image Best Represent The Connection You Have With?</string>
    <string name="news_feed">Bang Journey</string>
    <string name="near_you">Bangerverse</string>
    <string name="messages">Messages</string>
    <string name="_10">10</string>
    <string name="no_message_yet">No Message Yet !</string>
    <string name="no_message_in_your_inbox_yet_start_chatting_with_your_followers_or_near_you_people">No Message in your inbox yet ! Start chatting with your followers or near you people.</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="oliver_smith">Oliver Smith</string>
    <string name="follow">FOLLOW</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="may_2_2018">May 2 , 2018</string>
    <string name="smith">Smith</string>
    <string name="william_ethan_is_addictive_with_james">William ethan is Addictive with</string>
    <string name="_30_likes">30</string>
    <string name="followers">Followers</string>
    <string name="post">Post</string>
    <string name="addictive">ADDICTIVE</string>
    <string name="unsatisfied">UNSATISFIED</string>
    <string name="satisfied">SATISFIED</string>
    <string name="bang_requests">Bang Requests</string>
    <string name="you_can_view_all_bang_requests">You can view all bang requests.</string>
    <string name="you_can_view_and_edit_your_preferences">You can view and edit your preferences.</string>
    <string name="my_preferences">Preferences</string>
    <string name="setting">Settings</string>
    <string name="you_can_manage_your_notifications_password_etc">You can manage your notifications, password etc.</string>
    <string name="you_can_get_your_subscription_plans">You can get your subscription plans.</string>
    <string name="select_image">Please select profile image</string>
    <string name="select_name">Please enter full name</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="about_us">About Us</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="faq_s">FAQ\'s</string>
    <string name="logout">Logout</string>
    <string name="internet_connection">Server down or no internet connection</string>
    <string name="oops_wrong">oops something went wrong</string>
    <string name="_568_56985_023">568-56985-023</string>
    <string name="update">UPDATE</string>
    <string name="update_profile">Edit Profile</string>
    <string name="under_development">Under Development</string>
    <string name="subscription">Subscription</string>
    <string name="william_lian">William Lian</string>
    <string name="invite">Invite</string>
    <string name="no_servey_body">There are many variation of passages of Lorem Ipsum available, but the majority.</string>
    <string name="no_survey_sent_yet">No Survey Sent Yet!</string>
    <string name="choose_contact">Choose Contact</string>
    <string name="date_event_occurred">DATE EVENT OCCURRED</string>
    <string name="select_mobile">Please enter mobile number</string>
    <string name="go_back">GO BACK</string>
    <string name="currently_there_is_no_question_s_available_for_this_gender">Currently there is no question\'s available for this gender.</string>
    <string name="congratulation">Congratulations</string>
    <string name="as_per_your_given_survey_you_are_addicted">As per your given survey you are Addicted</string>
    <string name="do_you_want_to_share_with_your_partner">Do you want to share with your partner?</string>
    <string name="privates">PRIVATE</string>
    <string name="publics">PUBLIC</string>
    <string name="share">SHARE</string>
    <string name="there_are_many_variations_of_passages_of_lorem_ipsum_available_but_the_majority_have_suffered_alteration">There are many variations of passages of Lorem ipsum available, but the majority have suffered alteration.</string>
    <string name="complete">Completed</string>
    <string name="pending">Pending</string>
    <string name="out_of_cat"> remaining out of </string>
    <string name="was_your_experience_with_a_male_female_transgender_male_transgender_female_non_gender">Was Your Experience With A Male, Female, Transgender Male, Transgender Female, Non Gender?</string>
    <string name="selecting_partner" tools:ignore="ExtraTranslation">SELECTING PARTNER</string>
    <string name="space">_ _</string>
    <string name="am">AM</string>
    <string name="search_contact">Search Contact</string>
    <string name="not_found_gnder_title">Preferences Not  Completed</string>
    <string name="share_with_bang_follower">Share with Bang Follower</string>
    <string name="share_with_other">Share With Other</string>
    <string name="share_with_social_media">Share with social media</string>
    <string name="permission_necessary">Permission Necessary</string>
    <string name="storage_permission_is_encessary_to_wrote_event">Storage Permission Is Necessary To Wrote Event</string>
    <string name="survey">Survey</string>
    <string name="view_survey">View Survey</string>
    <string name="comment">Comments</string>
    <string name="write_a_comments">Write a comments...</string>
    <string name="survey_detail">Survey Details</string>
    <string name="was_your_experience_with_a_male_or_female">Was Your Experience With A Male Or Female?</string>
    <string name="no_comments_yet">No comments yet!</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="change">Change Email</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="invalid_password">Please enter valid password</string>
    <string name="invalid_number">Please enter valid number</string>
    <string name="enable_gps">Please Turn On Your Location</string>
    <string name="number">Mobile Number</string>
    <string name="change_pass_level">Change Password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">CANCEL</string>
    <string name="add_new_post">Add New Post</string>
    <string name="give_survey">Bang Survey</string>
    <string name="total_send_survey">Total Send Survey</string>
    <string name="following">Following</string>
    <string name="add_your_post">Add Your Post</string>
    <string name="enter_title">Enter Title</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="create_post">Create Post</string>
    <string name="receive_survey">Receive Survey</string>
    <string name="ok">Ok</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="report_a_user">Report a user</string>
    <string name="select_reasons">Select Reasons</string>
    <string name="description">Description</string>
    <string name="report">Report</string>
    <string name="send_nda">Send NDA</string>
    <string name="send_consent">Send Consent</string>
    <string name="block_user">Block User</string>
    <string name="delete_chat">Delete Chat</string>
</resources>