<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/_120sdp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_5sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_nda"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorTextName"
                android:fontFamily="@font/roboto_medium"/>

            <ImageView
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                android:src="@drawable/pending_ico"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_consent"
            android:textSize="@dimen/_12ssp"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@color/colorTextName"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_user"
            android:textSize="@dimen/_12ssp"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@color/colorTextName"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_chat"
            android:textSize="@dimen/_12ssp"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@color/colorTextName"
            android:fontFamily="@font/roboto_medium"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>