<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llPreferenceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/tvQuestionTitle"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/preferences"
            android:textColor="@color/colorWelcomeText"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:id="@+id/tvQuestionDesc"
            android:padding="@dimen/_8sdp"
            android:text="@string/what_image_best_represent_your_ideal_partners_hygiene"
            android:textColor="@color/colorLoginText"
            android:textSize="@dimen/_12ssp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcvAnsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


        <TextView
            android:id="@+id/tvFirstPreferenceNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/login_rounded_border"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/colorWelcomeText"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/tvFirstPreferenceSkip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/colorSkip"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

</RelativeLayout>